src_old/objects/RetailerServiceCertification__c.object
<CustomObject>
    <description>Retailer Service Certification relates Certifications to a Retailer, which determines the Services that are available when building a Project Service. Retailer Service Certification is related to Retailer, Service, and Certification.</description>
    <fields>
        <fullName>Certification__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Retailer Service Certifications</relationshipLabel>
        <relationshipName>Retailer_Service_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Retailer</label>
        <referenceTo>Retailer__c</referenceTo>
        <relationshipLabel>Retailer Service Certifications</relationshipLabel>
        <relationshipName>Retailer_Service_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Retailer Service Certifications</relationshipLabel>
        <relationshipName>Retailer_Service_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>Unique Key</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Retailer Service Certification</label>
    <nameField>
        <displayFormat>RSC-{000000000}</displayFormat>
        <label>Retailer Service Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retailer Service Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>